--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -111,8 +111,9 @@
     }
   
     .header-content {
-      width: 100%; /* Adjust width for smaller screens */
-      left: 5%; /* Further adjust for smaller screens */
+      width: 80%; /* Adjust width for smaller screens */
+      /* left: 5%; Further adjust for smaller screens */
+      padding :15px;
     }
   
     .header-nav {
